--- a/index.html
+++ b/index.html
@@ -7,82 +7,75 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+    <title>Bem vindo à Fórmula 1!</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <img src="img/Captura de Tela (3).png" alt="">
+            <p>Parabéns, você se destacou e foi campeão da Fórmula 2! Agora várias equipes da Fórmula 1 estão interessadas em te contratar. Entretanto, apenas 2 lhe chamam a atenção. Qual delas você escolhe?</p>
+            <button class="btn-proximo" data-proximo="1">Scuderia Ferrari</button>
+            <button class="btn-proximo" data-proximo="2">Oracle RedBull Racing</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+            <p>Ótimo! Você seguiu seu sonho assinando pela Ferrari. Você começa sua primeira corrida classificado para a quinta posição. Qual será sua primeira movimentação após a largada?</p>
+            <button class="btn-proximo" data-proximo="3">Ultrapassar o 4° lugar em X</button>
+            <button class="btn-proximo" data-proximo="4">Arriscar uma ultrapassagem dupla</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>Ótimo! Você escolheu o time com a melhor proposta e atual melhor carro. Porém classifica para a sétima posição. Qual será sua primeira estratégia após a largada?</p>
+            <button class="btn-proximo" data-proximo="5">Ultrapassar os 4 pilotos a sua frente</button>
+            <button class="btn-proximo" data-proximo="6">Preservar os pneus e ultrapassá-os nas próximas voltas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Você faz sua primeira brilhante manobra, freiando mais cedo e atrapalhando a linha do seu rival.</p>
+            <button class="btn-proximo" data-proximo="7">Manter o ritmo nas próximas voltas</button>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <img src="img/_106618823_char_crash_getty.jpg" alt="imagem batido no muro">
+            <p>Você tenta ir por dentro para passar o 4° e 3° lugar, mas exagerou na velocidade e bateu no muro. Sua carreira na Fórmula 1 durou pouco.</p>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>O motor de seu RedBull ruge ferozmente atrás dos 3 pilotos à sua frente e, em apenas 5 curvas do circuito, você consegue ultrapassá-los.</p>
+            <button class="btn-proximo" data-proximo="7">Manter o ritmo economizando a bateria</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>Segurando a onda, você consegue ultrapassar o sexto lugar e o quinto lugar gastando pouca bateria e combustível do seu carro.</p>
+            <button class="btn-proximo" data-proximo="8">Forçar o motor</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>Na volta 28, Você encontra com uma batalha de posições entre os pilotos em 3° e 2° Lugar.</p>
+            <button class="btn-proximo" data-proximo="9">Arriscar uma ultrapassagem dupla</button>
+            <button class="btn-proximo" data-proximo="10">Ultrapassar 1 por volta</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Você aumentou seu ritmo e alcançou o piloto em quarto lugar na volta 25.</p>
+            <button class="btn-proximo" data-proximo="7">Ultrapassá-lo</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Você ultrapassa com êxito e encontra a 3 segundos de distância o 1° Lugar. Após Forçar o seu carro ao Máximo, você consegue Ultrapassá-lo.</p>
+            <button class="btn-proximo" data-proximo="11">Cruzar a linha de chegada</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>Após se aproximar lentamente, você percebe que os 2 carros a sua frente se acidentam na disputa por posição, você poderá passá-los facilmente se manter o cuidado.</p>
+            <button class="btn-proximo" data-proximo="12">Desviar do acidente.</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <img src="img/charles-f1-win.jpg" alt="Após uma corrida árdua,">
+            <p>Você passa pela reta final e ganha sua corrida de estréia! Impressionante!</p>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Você alcança o primeiro lugar de forma inusitada, porèm manteve o ritmo até o final.</p>
+            <button class="btn-proximo" data-proximo="11">Cruzar a linha de chegada</button>
         </div>
     </main>
     <script src="script.js"></script>
