--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/Captura de Tela (3).png" alt="">
+            <img src="Captura de Tela (3).png" alt="">
             <p>Parabéns, você se destacou e foi campeão da Fórmula 2! Agora várias equipes da Fórmula 1 estão interessadas em te contratar. Entretanto, apenas 2 lhe chamam a atenção. Qual delas você escolhe?</p>
             <button class="btn-proximo" data-proximo="1">Scuderia Ferrari</button>
             <button class="btn-proximo" data-proximo="2">Oracle RedBull Racing</button>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/_106618823_char_crash_getty.jpg" alt="imagem batido no muro">
+            <img src="_106618823_char_crash_getty.jpg" alt="">
             <p>Você tenta ir por dentro para passar o 4° e 3° lugar, mas exagerou na velocidade e bateu no muro. Sua carreira na Fórmula 1 durou pouco.</p>
         </div>
 
@@ -69,7 +69,7 @@
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/charles-f1-win.jpg" alt="Após uma corrida árdua,">
+            <img src="charles-f1-win.jpg" alt="Após uma corrida árdua,">
             <p>Você passa pela reta final e ganha sua corrida de estréia! Impressionante!</p>
         </div>
 
